compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__conditional_snapshots@if_else_if_else_empty.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "if true { } else if false { } else { }"
---
[
    Statement {
        id: StatementId {
            def: ItemId {
                package: PackageId(
                    0,
                ),
                index: Idx(
                    0,
                ),
            },
            index: Idx(
                0,
            ),
        },
        kind: Expression(
            Expression {
                id: ExpressionId {
                    def: ItemId {
                        package: PackageId(
                            0,
                        ),
                        index: Idx(
                            0,
                        ),
                    },
                    index: Idx(
                        1,
                    ),
                },
                kind: If(
                    If {
                        id: ExpressionId {
                            def: ItemId {
                                package: PackageId(
                                    0,
                                ),
                                index: Idx(
                                    0,
                                ),
                            },
                            index: Idx(
                                1,
                            ),
                        },
                        cases: [
                            Condition {
                                condition: Some(
                                    Expression {
                                        id: ExpressionId {
                                            def: ItemId {
                                                package: PackageId(
                                                    0,
                                                ),
                                                index: Idx(
                                                    0,
                                                ),
                                            },
                                            index: Idx(
                                                2,
                                            ),
                                        },
                                        kind: Literal(
                                            Literal {
                                                id: ExpressionId {
                                                    def: ItemId {
                                                        package: PackageId(
                                                            0,
                                                        ),
                                                        index: Idx(
                                                            0,
                                                        ),
                                                    },
                                                    index: Idx(
                                                        2,
                                                    ),
                                                },
                                                kind: Boolean(
                                                    BooleanLiteral {
                                                        id: ExpressionId {
                                                            def: ItemId {
                                                                package: PackageId(
                                                                    0,
                                                                ),
                                                                index: Idx(
                                                                    0,
                                                                ),
                                                            },
                                                            index: Idx(
                                                                2,
                                                            ),
                                                        },
                                                        value: true,
                                                    },
                                                ),
                                                location: <internal>:3:7,
                                            },
                                        ),
                                        location: <internal>:3:7,
                                    },
                                ),
                                block: Block {
                                    statements: [],
                                    location: <internal>:8:11,
                                },
                                location: <internal>:3:11,
                            },
                            Condition {
                                condition: Some(
                                    Expression {
                                        id: ExpressionId {
                                            def: ItemId {
                                                package: PackageId(
                                                    0,
                                                ),
                                                index: Idx(
                                                    0,
                                                ),
                                            },
                                            index: Idx(
                                                3,
                                            ),
                                        },
                                        kind: Literal(
                                            Literal {
                                                id: ExpressionId {
                                                    def: ItemId {
                                                        package: PackageId(
                                                            0,
                                                        ),
                                                        index: Idx(
                                                            0,
                                                        ),
                                                    },
                                                    index: Idx(
                                                        3,
                                                    ),
                                                },
                                                kind: Boolean(
                                                    BooleanLiteral {
                                                        id: ExpressionId {
                                                            def: ItemId {
                                                                package: PackageId(
                                                                    0,
                                                                ),
                                                                index: Idx(
                                                                    0,
                                                                ),
                                                            },
                                                            index: Idx(
                                                                3,
                                                            ),
                                                        },
                                                        value: false,
                                                    },
                                                ),
                                                location: <internal>:20:25,
                                            },
                                        ),
                                        location: <internal>:20:25,
                                    },
                                ),
                                block: Block {
                                    statements: [],
                                    location: <internal>:26:29,
                                },
                                location: <internal>:20:29,
                            },
                            Condition {
                                condition: None,
                                block: Block {
                                    statements: [],
                                    location: <internal>:35:38,
                                },
                                location: <internal>:30:38,
                            },
                        ],
                        location: <internal>:0:38,
                    },
                ),
                location: <internal>:0:38,
            },
        ),
        location: <internal>:0:38,
    },
]
