compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__conditional_snapshots@unless_else_empty.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "unless true { } else { }"
---
[
    Statement {
        id: StatementId {
            def: ItemId(
                0,
            ),
            index: Idx(
                0,
            ),
        },
        kind: Unless(
            Unless {
                id: StatementId {
                    def: ItemId(
                        0,
                    ),
                    index: Idx(
                        0,
                    ),
                },
                cases: [
                    Condition {
                        condition: Some(
                            Expression {
                                id: ExpressionId {
                                    def: ItemId(
                                        0,
                                    ),
                                    index: Idx(
                                        1,
                                    ),
                                },
                                location: <internal>:7:11,
                                kind: Literal(
                                    Literal {
                                        id: ExpressionId {
                                            def: ItemId(
                                                0,
                                            ),
                                            index: Idx(
                                                1,
                                            ),
                                        },
                                        location: <internal>:7:11,
                                        kind: Boolean(
                                            BooleanLiteral {
                                                id: ExpressionId {
                                                    def: ItemId(
                                                        0,
                                                    ),
                                                    index: Idx(
                                                        1,
                                                    ),
                                                },
                                                value: true,
                                            },
                                        ),
                                    },
                                ),
                            },
                        ),
                        block: Block {
                            statements: [],
                            location: <internal>:12:15,
                        },
                        location: <internal>:7:15,
                    },
                    Condition {
                        condition: None,
                        block: Block {
                            statements: [],
                            location: <internal>:21:24,
                        },
                        location: <internal>:16:24,
                    },
                ],
                location: <internal>:0:24,
            },
        ),
        location: <internal>:0:24,
    },
]
