compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__duplicate_item@duplicate_func.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "fn foo() { } fn foo() { }"
---
× error[LM3028]: duplicate definition
   ╭───────────
 1 │ fn foo() { } fn foo() { }
   │                 ^^^ item foo is already defined within this file
   ∶ 
 1 │ fn foo() { } fn foo() { }
   │    ^^^ original definition found here
   ╰──
