compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__duplicate_item@duplicate_struct.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "struct Foo {} struct Foo { }"
---
DuplicateDefinition {
    source: SourceFile {
        id: SourceFileId(
            PackageId(
                0,
            ),
            0,
        ),
        name: Internal,
        content: "struct Foo {} struct Foo { }",
        package: PackageId(
            0,
        ),
    },
    duplicate_range: 21..24,
    original_range: 7..10,
    name: "Foo",
}
