compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__duplicate_item@duplicate_type.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "struct Foo {} trait Foo { }"
---
× error[LM3028]: duplicate definition
   ╭───────────
 1 │ struct Foo {} trait Foo { }
   │                     ^^^ item Foo is already defined within this file
   ∶ 
 1 │ struct Foo {} trait Foo { }
   │        ^^^ original definition found here
   ╰──
