compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__duplicate_type_param@duplicate.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "fn foo<T, T>() { }"
---
× error[LM3029]: duplicate type parameter
   ╭───────────
 1 │ fn foo<T, T>() { }
   │           ^ type parameter T is already defined
   ∶ 
 1 │ fn foo<T, T>() { }
   │        ^ original type parameter found here
   ╰──
